--- a/party_manifestos_new.ipynb
+++ b/party_manifestos_new.ipynb
@@ -553,6 +553,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "In France, the UK and the United States we see a decline in the postive statements on international cooperation over the last 10 years (after a peak at around 2005). In particular in the US, we can observe at the same time an increase in negative statements on international cooperation.<br>\n",
+    "This trend cannot be observed in Germany, although there has also been a certain increase in negative statements over the last years (with the formation of the AFD).<br><br>\n",
+    "\n",
     "Creating a number of diagrams to show the evolution of the attitude towards international cooperation over time\n",
     "(1980 - 2018) and between right-wing populist parties and other/government parties in European countries."
    ]
@@ -650,15 +653,7 @@
     "The diagrams compare the salience and attitude towards international cooperation in party manifestos between right-wing populist parties and all other parties or the parties in government (but not right-wing populist).<br>\n",
     "The first two diagrams show that there is no significant difference between right-wing populist parties and other parties with respect to the salience of international cooperation in party manifestos.\n",
     "On the other hand, negative statements with respect to international cooperation are significantly more common in the case of right-wing populist parties compared to other/government parties (3rd and 4th diagram).\n",
-    "In the case of positive statements on international cooperation, we can observe the opposite: Other/government parties more often formulate positive statements on internation cooperation in their party manifestos compared to right-wing populist parties."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "In France, the UK and the United States we see a decline in the postive statements on international cooperation over the last 10 years (after a peak at around 2005). In particular in the US, we can observe at the same time an increase in negative statements on international cooperation.<br>\n",
-    "This trend cannot be observed in Germany, although there has also been a certain increase in negative statements over the last years (with the formation of the AFD).<br><br>\n",
+    "In the case of positive statements on international cooperation, we can observe the opposite: Other/government parties more often formulate positive statements on internation cooperation in their party manifestos compared to right-wing populist parties.<br><br>\n",
     "\n",
     "Creating a figure showing the vote share of populist radical right parties and the share of positive statements with respect to international cooperation over time (as an average over all Western European countries)."
    ]
