--- a/party_manifestos.ipynb
+++ b/party_manifestos.ipynb
@@ -14,7 +14,7 @@
    "metadata": {},
    "source": [
     "The aim of this notebook is to analyze how the strength of populist radical right parties affect the attitude of parties in government towards international cooperation. In particular, it analyzes party manifestos with respect to their sentiment towards international cooperation and the frequencies of words related to international cooperation.<br>\n",
-    "The core data and the texts of the party manifestos are retreived from the Manifesto Project API (https://manifesto-project.wzb.eu/information/documents/api). Data on the strength of populist radical right parties in the respective countries (vote share, seats share) come from the ParlGov database (http://www.parlgov.org/) and parties are defined as right-wing populist according to the PopuList classifcation (https://popu-list.org).\n",
+    "The core data and the texts of the party manifestos are retreived from the Manifesto Project API (https://manifesto-project.wzb.eu/information/documents/api). Data on the strength of populist radical right parties in the respective countries (vote share, seats share) come from the ParlGov database (http://www.parlgov.org/) and parties are defined as populist radical right according to the PopuList classifcation (https://popu-list.org).\n",
     "\n",
     "#### Table of contents:\n",
     "1. Importing the modules required\n",
